--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block title %}Home – Strum & Strings{% endblock %}
 {% block content %}
-<main class="container h-100 main-picture">
+<div class="container h-100 main-picture">
   <div class="container">
     <!-- Hero Section -->
     <section class="hero home-hero text-center my-auto">
@@ -16,5 +16,5 @@
       </a>
     </section>
   </div>
-</main>
+</div>
 {% endblock %}
