--- a/templates/base.html
+++ b/templates/base.html
@@ -5,16 +5,18 @@
   <head>
     {% block meta %}
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Strum & Strings is your one-stop shop for guitars, accessories, and more.">
+      content="Strum & Strings is your one-stop shop for guitars, accessories, and more."
+    />
     <meta
       name="keywords"
-      content="guitars, musical instruments, accessories, acoustic, electric, music gear">
-    <meta name="author" content="Strum & Strings">
+      content="guitars, musical instruments, accessories, acoustic, electric, music gear"
+    />
+    <meta name="author" content="Strum & Strings" />
     {% endblock %} {% block canonical %}
-    <link rel="canonical" href="{{ request.build_absolute_uri }}">
+    <link rel="canonical" href="{{ request.build_absolute_uri }}" />
     {% endblock %}
 
     <title>{% block title %}Strum & Strings{% endblock %}</title>
@@ -22,14 +24,15 @@
     {% block corecss %}
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    {% endblock %} 
-    
-    {% block extra_css %}
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    {% endblock %} {% block extra_css %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     {% endblock %}
-
   </head>
   <body>
     <div class="wrapper d-flex flex-column">
@@ -53,24 +56,24 @@
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div
-            class="collapse navbar-collapse"
-            id="navbarNav"
-          >
-          <form class="d-flex mx-auto" method="get" action="{% url 'products:products_list' %}">
-            <input
-              class="form-control me-2 w-100"
-              type="search"
-              name="q"
-              placeholder="Search"
-              aria-label="Search"
-              value="{{ query|default:'' }}"
-            />
-            <button class="btn btn-custom-search" type="submit">
-              Search
-            </button>
-          </form>
-          
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <form
+              class="d-flex mx-auto"
+              method="get"
+              action="{% url 'products:products_list' %}"
+            >
+              <input
+                class="form-control me-2 w-100"
+                type="search"
+                name="q"
+                placeholder="Search"
+                aria-label="Search"
+                value="{{ query|default:'' }}"
+              />
+              <button class="btn btn-custom-search" type="submit">
+                Search
+              </button>
+            </form>
 
             <ul
               class="navbar-nav ms-auto list-inline list-unstyled"
@@ -90,26 +93,40 @@
               </li>
               {% if user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'accounts:profile' %}">Welcome, {{ user.username }}</a>
+                <a class="nav-link" href="{% url 'accounts:profile' %}"
+                  >Welcome, {{ user.username }}</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
               </li>
-              {% else %}
+              {% if user.is_staff %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'accounts:admin_dashboard' %}"
+                  >Admin Dashboard</a
+                >
+              </li>
+              {% endif %} {% else %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'account_login' %}">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+                <a class="nav-link" href="{% url 'account_signup' %}"
+                  >Sign Up</a
+                >
               </li>
               {% endif %}
               <li class="nav-item">
-                <a class="nav-link position-relative" href="{% url 'cart:view_cart' %}">
-                  Cart
-                  {% if cart_item_count > 0 %}
-                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                      {{ cart_item_count }}
-                    </span>
+                <a
+                  class="nav-link position-relative"
+                  href="{% url 'cart:view_cart' %}"
+                >
+                  Cart {% if cart_item_count > 0 %}
+                  <span
+                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                  >
+                    {{ cart_item_count }}
+                  </span>
                   {% endif %}
                 </a>
               </li>
@@ -139,9 +156,9 @@
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'products:products_list' %}">Shop</a></li>
                 {% if user.is_authenticated %}
-                  <li><a href="{% url 'accounts:profile' %}">Account</a></li>
+                <li><a href="{% url 'accounts:profile' %}">Account</a></li>
                 {% else %}
-                  <li><a href="{% url 'account_login' %}">Login</a></li>
+                <li><a href="{% url 'account_login' %}">Login</a></li>
                 {% endif %}
                 <li><a href="#contact">Contact</a></li>
               </ul>
@@ -149,10 +166,18 @@
             <div class="col-md-3 mb-4 mb-md-0">
               <h5>Follow Us</h5>
               <div class="footer-social-icons">
-                <a href="https://www.facebook.com/" target="_blank" class="me-3">
+                <a
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  class="me-3"
+                >
                   <i class="fab fa-facebook-f fa-2x"></i>
                 </a>
-                <a href="https://www.instagram.com/" target="_blank" class="me-3">
+                <a
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  class="me-3"
+                >
                   <i class="fab fa-instagram fa-2x"></i>
                 </a>
                 <a href="https://twitter.com/" target="_blank" class="me-3">
@@ -163,7 +188,11 @@
           </div>
           <div class="footer-newsletter text-center mt-3">
             <p class="mb-1">Stay in Tune with Us!</p>
-            <a href="{% url 'accounts:newsletter_signup' %}" class="btn btn-outline-light btn-sm">Subscribe to Newsletter</a>
+            <a
+              href="{% url 'accounts:newsletter_signup' %}"
+              class="btn btn-outline-light btn-sm"
+              >Subscribe to Newsletter</a
+            >
           </div>
           <div class="text-center mt-4">
             &copy; 2025 Strum & Strings. All Rights Reserved.
@@ -180,10 +209,8 @@
     {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    {% block postloadjs %}
-    {{ block.super }}
+    {% block postloadjs %} {{ block.super }}
     <script src="{% static 'js/back_to_top.js' %}"></script>
     {% endblock %}
-
   </body>
 </html>
