--- a/accounts/templates/accounts/admin_dashboard.html
+++ b/accounts/templates/accounts/admin_dashboard.html
@@ -25,16 +25,16 @@
 
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
-                <a href="" class="text-decoration-none">Django Admin Panel</a>
+                <a href="{% url 'admin:index' %}" class="text-decoration-none">Django Admin Panel</a>
               </li>
               <li class="list-group-item">
-                <a href="" class="text-decoration-none">Add New Product</a>
+                <a href="{% url 'accounts:add_product' %}" class="text-decoration-none">Add New Product</a>
               </li>
               <li class="list-group-item">
-                <a href="" class="text-decoration-none">View All Orders</a>
+                <a href="{% url 'accounts:order_list' %}" class="text-decoration-none">View All Orders</a>
               </li>
               <li class="list-group-item">
-                <a href="" class="text-decoration-none">Manage Product Catalog</a>
+                <a href="{% url 'accounts:product_catalog' %}" class="text-decoration-none">Manage Product Catalog</a>
               </li>
             </ul>
           </div>
